<?xml version="1.0" encoding="utf-8"?>
<com.android.bible.knowbible.mvvm.view.theme_editor.MyNestedScrollViewLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollContainerBookInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.android.bible.knowbible.mvvm.view.activity.MainActivity">

        <com.android.bible.knowbible.mvvm.view.theme_editor.MyTextView
            android:id="@+id/tvVerse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/tv_find_your_daily_verse"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="220dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="170dp"
                android:layout_height="150dp"
                android:tint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_book_find" />

            <com.android.bible.knowbible.mvvm.view.theme_editor.MyTextView
                android:id="@+id/btnFind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="2dp"
                android:text="@string/tv_find"
                android:textSize="26sp" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnList"
            android:layout_width="94dp"
            android:layout_height="104dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/tv_list"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:backgroundTint="@null"
            app:cornerRadius="46dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="3dp"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShare"
            android:layout_width="94dp"
            android:layout_height="104dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="80dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/tv_share"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:backgroundTint="@null"
            app:cornerRadius="46dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout3"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="3dp"
            tools:ignore="RtlSymmetry" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.android.bible.knowbible.mvvm.view.theme_editor.MyNestedScrollViewLayout>